Fixed overflow:hidden issues on iOS devices

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -209,6 +209,11 @@ footer {
 
 @media (max-width: 777px) {
   body.open {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0; 
+    left: 0;
     overflow: hidden;
   }
   header .menu-button {
